--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/justinl-y/project-02#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
     "browser-sync": "^2.17.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
     "gulp-cssnano": "^2.1.2",
     "gulp-eslint": "^3.0.1",
     "gulp-notify": "^2.2.0",
